--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Project:Obsrvr</title>
 </head>
 <body>
-    <h1>Welcome One, Welcome All</h1>
+    <h1>Adam Purdy</h1>
       <div class="navig">  
         <nav class="navi1">
             <a class="navi" href="#">Safe Space</a>
@@ -16,9 +16,10 @@
             <a class="navi" href="#">Blasts From The Past</a>
         </nav>
         </div>
+    <h2>Welcome One, Welcome All</h2>
     <h2>Unreserved Observations</h2>
         <div class="info">
-            <p>Hey there! My name's Adam. Let me show you a lil sumthin-sumthin.</p>
+            <p>Hey there! My name's Adam. Let me show you a lil sumthin-sumthin about the plur papi himself.</p>
         </div>
         <br><br>
         <p class="home">This is where I call home</p>
@@ -49,7 +50,9 @@
     </section>
     <div class="end">
         <nav class="navi1">
+            <a class="navi" href="#">Twitter</a>
             <a class="navi" href="#">Get In Touch</a>
+            <a class="navi" href="#">Instagram</a>
         </nav>
     </div>
     
